Fix sidebar gap

--- a/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/src/app/layout/components/sidebar/sidebar.component.scss
@@ -5,7 +5,7 @@ $topnav-background-color: #FFFFFF;
     position: fixed;
     z-index: 1000;
     // top: 56px;
-    top: 100px;
+    top: 80px;
     left: 235px;
     width: 235px;
     margin-left: -235px;
